app/src/main/java/com/example/fail/Coord.kt
package com.example.fail

data class Coord(
    val lat: Double,
    val lon: Double
)